# JBrain2

./: .gitignore  CLAUDE.md  README.md  local-llm-card-mockup.html
backend/: Dockerfile  pyproject.toml
backend/evals/: README.md  __init__.py  audit.py  promotion.py  run.py
backend/evals/box/: README.md  client.py  run_layer.py
backend/evals/cases/: 00_core.json  10_hard_grammar.json  20_relationships.json  30_temporal.json  50_orgs_groups.json  60_places_concepts.json  70_animals_products.json  80_aliases_author.json  90_events_values.json  91_health_clinical.json  92_finance.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_core_identity_and_rls.py  0002_notes_and_attachments.py  0003_jobs_chunks_ingest_state.py  0004_note_location.py  0005_attachment_delete_grant.py  0006_analysis_schema.py  0007_note_analysis_and_llm_usage.py  0008_note_capture_time.py  0008_note_tz_offset.py  0009_note_hidden.py  0009_note_purge_delete_grants.py  0010_attachment_extracts.py  0010_note_hidden.py  0011_attachment_extracts.py  0011_fact_derived_from.py  0012_app_settings.py  0013_fact_derived_from.py  0014_derived_domain_chunks.py  0015_agent_sessions.py  0016_agent_runs.py  0017_agent_memory.py  0018_proposals.py  0019_connectors.py  0020_agent_turns.py  0021_agent_session_delete.py  0022_lists.py  0023_agent_session_archive.py  0023_extraction_truncated_review_kind.py  0023_review_deferred.py  0024_review_deferred.py  0025_agent_session_archive.py  0026_appointments.py  0027_appointment_proposal_kind.py  0028_appointment_facets.py  0029_note_integration_state.py  0030_low_confidence_inference_review_kind.py  0031_canonical_predicates.py  0032_new_predicate_review_kind.py  0033_backfill_inference_value_json.py  0034_confirm_entity_review_kind.py  (+138 more)
backend/src/jbrain/: captions.py  citygeocode.py  cli.py  config.py  embed.py  geocode.py  host_metrics.py  htmltext.py  install_wipe.py  log_capture.py  main.py  media.py  mqtt_consumer.py  ops_metrics.py  queue.py  settings_store.py  storage.py  stream.py  tiles.py  transcribe.py  usage.py  worker.py
backend/src/jbrain/agent/: __init__.py  agents.py  appointmenttools.py  archivisttools.py  attachment_content.py  attachments.py  brainevents.py  briefs.py  chartscale.py  charttools.py  (+60 more)
backend/tests/: conftest.py
backend/tests/eval/: README.md  assertions.py  cases.py  run.py  runner.py
backend/tests/harness/: README.md  __init__.py  runner.py  scenario.py
backend/tests/integration/: conftest.py  test_actions_rls.py  test_agent_connectors_rls.py  test_agent_memory_pg.py  test_agent_memory_rls.py  test_agent_merge_pg.py  test_agent_proposals_pg.py  test_agent_proposals_rls.py  test_agent_read_tools_rls.py  test_agent_runlog_rls.py  test_agent_session_rls.py  test_agent_turns_rls.py  test_analysis_gating_pg.py  test_analysis_rls.py  test_apply_intent_pg.py  test_appointment_projection_pg.py  test_appointment_proposal_pg.py  test_appointments_pg.py  test_appointments_rls.py  test_archivist_memory_rls.py  test_automations_reader_rls.py  test_canonical_projection_pg.py  test_capability_pg.py  test_compare_images_pg.py  test_consolidation_pg.py  test_correction_note_pg.py  test_correctionmine_pg.py  test_current_three_valued_pg.py  test_cutover_pg.py  test_devices_pg.py  test_dispatcher_pg.py  test_emr_import_handler_pg.py  test_emr_intake_pg.py  test_emr_integrate_pg.py  test_emr_projection_rls.py  test_emr_reconcile_pg.py  test_emr_trigger_pg.py  test_entity_list_pg.py  test_entity_neighbors_pg.py  test_entity_resolution_pg.py  (+101 more)
backend/tests/unit/: fakes.py  test_agent_api.py  test_agent_appointmenttools.py  test_agent_classifier.py  test_agent_connectortools.py  test_agent_contracts.py  test_agent_fetchtools.py  test_agent_grabtools.py  test_agent_listtools.py  test_agent_loop.py  test_agent_memory.py  test_agent_memorytools.py  test_agent_mergetools.py  test_agent_proposals.py  test_agent_proposaltools.py  test_agent_readtools.py  test_agent_reflexion.py  test_agent_runlog.py  test_agent_session.py  test_agent_streamtools.py  test_agent_toolregistry.py  test_agent_transcribetools.py  test_agent_videotools.py  test_agent_visiontools.py  test_agents.py  test_analysis_arbiter.py  test_analysis_canonical.py  test_analysis_consolidation.py  test_analysis_display.py  test_analysis_extraction.py  test_analysis_integrate.py  test_analysis_intent.py  test_analysis_intent_parse.py  test_analysis_persist.py  test_analysis_pins.py  test_analysis_prompt.py  test_analysis_relationships.py  test_analysis_weight.py  test_api.py  test_appointment_projection.py  (+237 more)
jcode/: Dockerfile  grok-config.sh  jcode-claude  jcode-grok  jcode-openclaw  jcode-path.sh  openclaw-config.sh  pyproject.toml
jcode/src/jcode_ctl/: __init__.py  agent.py  app.py  config.py  host_preview.py  main.py  preview.py  preview_proxy.py  sessions.py  terminal.py  workspace.py
jcode/tests/: conftest.py  test_app.py  test_config.py  test_grok_config.py  test_host_app.py  test_host_preview.py  test_jcode_claude.py  test_jcode_grok.py  test_jcode_openclaw.py  test_preview.py  test_preview_proxy.py  test_reaper.py  test_sessions.py  test_terminal.py  test_workspace.py
supervisor/: Dockerfile  pyproject.toml
supervisor/src/supervisor/: __init__.py  app.py  config.py  gateway.py  host_metrics.py  main.py
supervisor/tests/: __init__.py  conftest.py  test_auth.py  test_deploy_scripts.py  test_gateway_reaping.py  test_logs.py  test_metrics.py  test_oneshots.py  test_rebuild.py  test_restart.py  test_service_control.py  test_status.py  test_update.py
(+1514 files in other folders)
