[project]
name = "jbrain"
version = "0.1.0"
description = "JBrain2 backend: API and worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    # WebSocket *client* for ComfyUI's /ws — the only source of live generation
    # progress + b_preview frames (docs/IMAGE_GEN_LIVE_PLAN.md). httpx has no WS
    # client; this is the standard minimal async one. (live.py's server-side WS is
    # FastAPI/Starlette, a different surface.)
    "websockets>=13.0",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "pillow>=10.4",
    "pyyaml>=6.0",
    "aiomqtt>=2.5.1",
    "geonamescache>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "testcontainers[postgres]>=4.8",
    "filelock>=3.12",
    "psycopg[binary]>=3.2",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jbrain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires a Docker daemon (testcontainers); skipped when unavailable",
]

[tool.coverage.run]
source = ["jbrain"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
