[project]
name = "jbrain-jcode"
version = "0.1.0"
description = "jcode control server: sandboxed coding sessions driven through an interactive terminal against an on-box coder model."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2",
    "uvicorn[standard]>=0.30",
]

# The `@anthropic-ai/claude-code` CLI the session terminal runs is installed in the
# IMAGE (jcode/Dockerfile), not declared here, for the same reason the
# local-llm/comfyui weights live in their images: it is box-only runtime, never
# bootstrapped into dev/CI (which have no model gateway). The control server itself
# needs none of it — the CLI is launched inside the sandbox shell.

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcode_ctl"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
